--- a/Runtime/HexTecGames.RectGridSystem.asmdef
+++ b/Runtime/HexTecGames.RectGridSystem.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:4cc4c207c147801449ee01314a8f99b8",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:8d14f6e78415cd04ca19514f31da470c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
