--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Package for handling rectangular grids",
   "unity": "2019.1",
   "dependencies": {
-    "com.hextecgames.basics": "1.0.0"
+    "com.hextecgames.basics": "1.0.0",
+    "com.hextecgames.gridbasesystem": "1.0.0"
   },
   "author": {
     "name": "HexTecGames"
