--- a/Editor/HexTecGames.RectGridSystem.Editor.asmdef
+++ b/Editor/HexTecGames.RectGridSystem.Editor.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "HexTecGames.RectGridSystem.Editor",
+    "rootNamespace": "",
     "references": [
+        "GUID:fa814ccdf3a1c2b4aaac3e254ac44cd9"
     ],
     "includePlatforms": [
         "Editor"
