--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "com.hextecgames.rectgridsystem",
-  "version": "1.0.3",
-  "displayName": "RectGridSystem",
+  "name": "com.hextecgames.gridrectsystem",
+  "version": "1.1.0",
+  "displayName": "GridRectSystem",
   "description": "Package for handling rectangular grids",
   "unity": "2019.1",
   "dependencies": {
@@ -9,6 +9,7 @@
     "com.hextecgames.gridbasesystem": "1.0.0"
   },
   "author": {
-    "name": "HexTecGames"
+    "name": "HexTecGames",
+    "email": "HexTecGames0@gmail.com"
   }
 }
